<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.view.ListActivity">
    <item
        android:id="@+id/menu_overflow_button_create_meeting"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/menu_filter_date"
                android:orderInCategory="100"
                android:title="@string/menu_filter_date"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_filter_room"
                android:orderInCategory="200"
                android:title="@string/menu_filter_room" />

            <item
                android:id="@+id/menu_sort_date"
                android:orderInCategory="300"
                android:title="@string/menu_sort_date"
                app:showAsAction="never" />

        </menu>
    </item>


</menu>
